--- a/Lab03/app/src/main/res/values/strings.xml
+++ b/Lab03/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="TaskUpdated">Task Updated</string>
     <string name="TaskDeleted">Task Deleted</string>
     <string name="TaskCompelete">Task Completed</string>
+    <string name="notCompleted">Task not completed</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
 </resources>
